--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -5,15 +5,17 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
     
     steps:
     - uses: actions/checkout@v2
+    - name: install dependency
+      run: apt-get -y update && apt-get install -y libjpeg-turbo8-dev cmake gcc libx11-dev libxkbcommon-x11-dev libxshmfence-dev libxext-dev libxext6 x11proto-dev x11proto-xext-dev nx-x11proto-xext-dev libpam0g-dev libxcb-xkb1 libxkbcommon0 libxkbcommon-x11-0 x11-xkb-utils xkb-data xauth nasm intel2gas  
     - name: mkdir
       run: mkdir build
     - name: cd
       run: cd build
     - name: cmake
-      run: cmake -G"Unix Makefiles" ../unix
+      run: cmake ../ -DTVNC_USEPAM=0 -DTVNC_BUILDJAVA=0 -DTVNC_USETLS=0 -DTVNC_BUILDNATIVE=0
     - name: make
       run: make
