--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install dependency
-      run: apt-get -y update && apt-get install -y libjpeg-turbo8-dev cmake gcc libx11-dev libxkbcommon-x11-dev libxshmfence-dev libxext-dev libxext6 x11proto-dev x11proto-xext-dev nx-x11proto-xext-dev libpam0g-dev libxcb-xkb1 libxkbcommon0 libxkbcommon-x11-0 x11-xkb-utils xkb-data xauth nasm intel2gas  
+      run: sudo apt-get -y update && sudo apt-get install -y libjpeg-turbo8-dev cmake gcc libx11-dev libxkbcommon-x11-dev libxshmfence-dev libxext-dev libxext6 x11proto-dev x11proto-xext-dev nx-x11proto-xext-dev libpam0g-dev libxcb-xkb1 libxkbcommon0 libxkbcommon-x11-0 x11-xkb-utils xkb-data xauth nasm intel2gas  
     - name: mkdir
       run: mkdir build
     - name: cd
